@@ -10,6 +10,9 @@ Bug Fixes
 Features
 --------
 
+- When using the auth_tkt authentication plugin accept a ``tokens`` parameter
+  in :py:func:`pyramid.security.remember`.
+
 - If a resource implements a ``__resource_url__`` method, it will be called
   as the result of invoking the ``pyramid.url.resource_url`` function to
   generate a URL, overriding the default logic.  See the new "Generating The
